@@ -244,7 +244,7 @@ bool Util::canClassBeInstanciated(const Class* klass)
         if (meth.isConstructor()) {
             ctorFound = true;
             if (meth.access() != Access_private) {
-                // this class can be instanciated
+                // this class can be instanstiated
                 publicCtorFound = true;
             }
         } else if ((meth.flags() & Method::PureVirtual) && meth.access() == Access_private) {
@@ -252,9 +252,9 @@ bool Util::canClassBeInstanciated(const Class* klass)
         }
     }
     
-    // The class can be instanciated if it has a public constructor or no constructor at all
+    // The class can be instanstiated if it has a public constructor or no constructor at all
     // because then it has a default one generated by the compiler.
-    // If it has private pure virtuals, then it can't be instanciated either.
+    // If it has private pure virtuals, then it can't be instanstiated either.
     bool ret = ((publicCtorFound || !ctorFound) && !privatePureVirtualsFound);
     cache[klass] = ret;
     return ret;
@@ -375,7 +375,7 @@ void Util::checkForAbstractClass(Class* klass)
             list << &meth;
     }
     
-    // abstract classes can't be instanciated - remove the constructors
+    // abstract classes can't be instanstiated - remove the constructors
     if (hasPrivatePureVirtuals) {
         foreach (const Method* ctor, list) {
             klass->methodsRef().removeOne(*ctor);
@@ -714,7 +714,7 @@ QList<const Method*> Util::virtualMethodsForClass(const Class* klass)
 {
     static QHash<const Class*, QList<const Method*> > cache;
     
-    // virtual method callbacks for classes that can't be instanciated aren't useful
+    // virtual method callbacks for classes that can't be instanstiated aren't useful
     if (!Util::canClassBeInstanciated(klass))
         return QList<const Method*>();
     
