@@ -369,9 +369,8 @@ void Parser::reportError(const QString& msg)
       Problem *p = new Problem;
       p->file = session->url().str();
       p->position = position;
-      p->description = msg;
+      p->description = msg + " : " + QString::fromUtf8(lineFromContents(session->contents(), p->position.line));
       p->source = Problem::Source_Parser;
-
       control->reportProblem(p);
     }
   else if (_M_hold_errors)
@@ -411,6 +410,7 @@ bool Parser::skipUntilDeclaration()
         case Token_identifier:
         case Token_operator:
         case Token_char:
+        case Token_size_t:
         case Token_wchar_t:
         case Token_bool:
         case Token_short:
@@ -476,6 +476,7 @@ bool Parser::skipUntilStatement()
         case Token_catch:
         case Token_throw:
         case Token_char:
+        case Token_size_t:
         case Token_wchar_t:
         case Token_bool:
         case Token_short:
@@ -1199,6 +1200,7 @@ bool Parser::parseSimpleTypeSpecifier(TypeSpecifierAST *&node,
       switch(session->token_stream->lookAhead())
         {
         case Token_char:
+        case Token_size_t:
         case Token_wchar_t:
         case Token_bool:
         case Token_short:
